ui: Simplify displaying axe-core results for clarity

--- a/app/views/checks/_run_axe_on_homepage.html.erb
+++ b/app/views/checks/_run_axe_on_homepage.html.erb
@@ -3,21 +3,18 @@
   <%= badge to_badge(check) %>
 
   <% if check.completed? %>
-    <ul>
-      <li><strong><%= check.human(:checks_total) %></strong> : <%= number_to_human(check.checks_total) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:passes) %></strong> : <%= number_to_human(check.passes) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:violations) %></strong> : <%= number_to_human(check.violations) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:incomplete) %></strong> : <%= number_to_human(check.incomplete) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:inapplicable) %></strong> : <%= number_to_human(check.inapplicable) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:success_rate) %></strong> : <%= check.human_success_rate %></li>
-    </ul>
+    <p>
+      <strong><%= check.human(:success_rate) %></strong> :
+      <%= check.human_success_rate %>
+      (<%= check.passes + check.incomplete %>/<%= check.applicable_total %>)
+    </p>
   <% end %>
 
   <%= dsfr_accordion do |accordion| %>
     <% check.violation_data.each do |violation| %>
-      <% accordion.with_section title: "[#{violation.human_impact}] #{violation.help} (#{violation.nodes_count})" do %>
+      <% accordion.with_section title: "#{violation.help} (#{violation.human_impact})" do %>
         <p><%= dsfr_link_to violation.description, violation.help_url, target: :_blank, rel: :noopener %></p>
-        <p><%= check.human(:elements) %> : <%= violation.nodes_count %></p>
+        <p><strong><%= check.human_count(:elements_count, count: violation.nodes_count) %></strong></p>
         <% if violation.nodes %>
           <ol>
             <% violation.nodes_html.each do |html| %>
