feat: Detect accessibility pages not mentionning the law article
Display a warning instead for educational purpose

# Conflicts:
#	app/models/checks/analyze_accessibility_page.rb
#	config/locales/fr.yml

--- a/app/views/checks/_analyze_accessibility_page.html.erb
+++ b/app/views/checks/_analyze_accessibility_page.html.erb
@@ -21,6 +21,7 @@
       <% end %>
       <li><strong><%= check.human(:standard) %></strong> : <%= check.standard || check.human(:unknown) %></li>
       <li><strong><%= check.human(:auditor) %></strong> : <%= check.auditor || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:mentions_article) %></strong> : <%= check.mentions_article ? t("shared.yes") : t("shared.no") %></li>
     </ul>
   <% end %>
 </div>
