--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,16 +1,17 @@
 <% if @tags.load.any? %>
-  <%= dsfr_table(caption: Tag.human(:all)) do |t| %>
+
+  <%= dsfr_table(caption: Tag.human(:all), size: :lg) do |t| %>
     <% t.with_head do %>
       <tr>
         <th scope="col" aria-sort="ascending"><%= Tag.human(:name) %></th>
-        <th scope="col" class="fr-cell--right"><%= Tag.human(:sites) %></th>
+        <th scope="col"><%= Tag.human(:sites) %></th>
       </tr>
     <% end %>
     <% t.with_body do %>
       <% @tags.each do |tag| %>
         <tr>
-          <td><%= link_to tag.name, tag %></td>
-          <td class="fr-cell--right"><%= tag.sites_count %></td>
+          <td><%= dsfr_link_to tag.name, tag %></td>
+          <td><%= dsfr_link_to Tag.human(:see_sites, tag: tag.name, count: tag.sites_count), sites_path(search: { tag_id: tag.id }) %></td>
         </tr>
       <% end %>
     <% end %>
