feat: Remove filter button text from URL params

--- a/app/views/shared/_filter.html.erb
+++ b/app/views/shared/_filter.html.erb
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="fr-col">
-      <%= f.submit t("shared.filter"), class: "fr-btn fr-btn--secondary" %>
+      <%= f.submit t("shared.filter"), name: nil, class: "fr-btn fr-btn--secondary" %>
     </div>
   </div>
 <% end %>
