--- a/app/components/dsfr/table_component.html.erb
+++ b/app/components/dsfr/table_component.html.erb
@@ -39,8 +39,9 @@
         <p class="fr-table__detail"><%= total_lines %></p>
         <% if lines.positive? -%>
           <%= form_with(url: url_for, method: :get, data: { controller: :autosubmit, action: "input->autosubmit#submit" }) do |f| %>
-            <%= f.hidden_field :sort, name: "sort[#{params[:sort].keys.first}]", value: params[:sort].values.first if params[:sort] %>
-            <%= f.hidden_field :filter, value: params[:filter] if params[:filter] %>
+            <% helpers.flatten_params(:sort, :filter).each do |name, value| %>
+              <%= f.hidden_field name, value:, id: nil %>
+            <% end %>
             <div class="fr-select-group">
               <%= f.dsfr_label_with_hint :limit, label: per_page_label, class: "fr-sr-only" %>
               <%= f.dsfr_select_tag :limit, per_page_options, required: true, include_blank: per_page_label, selected: per_page %>
