fix: Fix displaying empty year message when years is empty array

--- a/app/views/checks/_analyze_plan.html.erb
+++ b/app/views/checks/_analyze_plan.html.erb
@@ -14,7 +14,7 @@
       </li>
       <li>
         <strong><%= Checks::AnalyzePlan.human(:years) %> :</strong>
-        <% if check.years %>
+        <% if check.years.present? %>
           <%= check.years.join("-") %>
         <% else %>
           <%= Checks::AnalyzePlan.human(:year_not_found) %>
