--- a/app/views/checks/_analyze_plan.html.erb
+++ b/app/views/checks/_analyze_plan.html.erb
@@ -2,19 +2,30 @@
   <h2 class="fr-h4 fr-mb-1w"><%= check.human_type %></h2>
   <%= badge to_badge(check) %>
 
-  <% if check.completed? && check.link_url %>
+  <% if check.completed? %>
     <ul>
-      <li>
-        <strong><%= Checks::AnalyzePlan.human(:link_text) %> :</strong>
-        <%= check.link_text %>
-      </li>
-      <li>
-        <strong><%= Checks::AnalyzePlan.human(:link_url) %> :</strong>
-        <%= link_to check.link_url, check.link_url, target: :_blank %>
-      </li>
-      <% if check.link_misplaced %>
+      <% if check.link_url %>
         <li>
-          <strong><%= Checks::AnalyzePlan.human(:link_misplaced) %></strong>
+          <strong><%= Checks::AnalyzePlan.human(:link_text) %> :</strong>
+          <%= check.link_text %>
+        </li>
+        <li>
+          <strong><%= Checks::AnalyzePlan.human(:link_url) %> :</strong>
+          <%= link_to check.link_url, check.link_url, target: :_blank %>
+        </li>
+        <% if check.link_misplaced %>
+          <li>
+            <strong><%= Checks::AnalyzePlan.human(:link_misplaced) %></strong>
+          </li>
+        <% end %>
+      <% elsif check.page_heading %>
+        <li>
+          <strong><%= Checks::AnalyzePlan.human(:plan_in_page_heading) %> :</strong>
+          <%= check.page_heading %>
+        </li>
+      <% else %>
+        <li>
+          <strong><%= Checks::AnalyzePlan.human(:nothing_found) %></strong>
         </li>
       <% end %>
       <li>
