--- a/app/views/checks/_analyze_schema.html.erb
+++ b/app/views/checks/_analyze_schema.html.erb
@@ -12,6 +12,11 @@
         <strong><%= Checks::AnalyzeSchema.human(:link_url) %> :</strong>
         <%= link_to check.link_url, check.link_url, target: :_blank %>
       </li>
+      <% if check.link_misplaced %>
+        <li>
+          <strong><%= Checks::AnalyzePlan.human(:link_misplaced) %></strong>
+        </li>
+      <% end %>
       <li>
         <strong><%= Checks::AnalyzeSchema.human(:years) %> :</strong>
         <% if check.years.present? %>
