--- a/app/views/checks/_analyze_plan.html.erb
+++ b/app/views/checks/_analyze_plan.html.erb
@@ -19,10 +19,10 @@
             <br><%= Checks::AnalyzePlan.human(:link_misplaced) %>
           <% end %>
         </li>
-      <% elsif check.page_heading %>
+      <% elsif check.text %>
         <li>
-          <strong><%= Checks::AnalyzePlan.human(:plan_in_page_heading) %> :</strong>
-          <%= check.page_heading %>
+          <strong><%= Checks::AnalyzePlan.human(:plan_in_main_text) %> :</strong>
+          <%= check.text %>
         </li>
       <% else %>
         <li>
