--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,11 @@
 <%= dsfr_header(
-  logo_text: t("global.sponsor_html"),
-  title: t("global.service_name"),
-  tagline: t("global.service_description"),
-  html_attributes: {
-    id: :nav,
-    class: class_names(development: Rails.env.development?, staging: Rails.application.staging?)
-  }) do |header| %>
+      logo_text: t("global.sponsor_html"),
+      title: t("global.service_name"),
+      tagline: t("global.service_description"),
+      html_attributes: {
+        id: :nav,
+        class: class_names(development: Rails.env.development?, staging: Rails.application.staging?)
+      }) do |header| %>
   <%= header.with_direct_link_simple title: t("pages.accueil.title"), path: root_path, active: current_page?(root_path) %>
 
   <%= header.with_tool_link title: t("pages.display_mode.title"), path: display_mode_path, html_attributes: { class: icon_class(:theme), "data-turbo-frame": :modal } %>
@@ -17,6 +17,7 @@
     <%= header.with_direct_link_simple title: Site.human(:all), path: sites_path, active: current_page?(controller: :sites, action: :index) %>
     <%= header.with_direct_link_simple title: Site.human(:add), path: new_site_path, active: current_page?(controller: :sites, action: :new) %>
     <%= header.with_direct_link_simple title: Tag.human(:all), path: tags_path, active: current_page?(controller: :tags, action: :index) %>
+    <%= header.with_direct_link_simple title: t("shared.help"), path: help_path, active: current_page?(controller: :pages, action: :help) %>
   <% else %>
     <%= header.with_tool_link title: t("shared.login"), path: login_path, html_attributes: { class: [icon_class(:account, :circle, btn: :secondary)] } %>
   <% end %>
