--- a/app/views/checks/_analyze_accessibility_page.html.erb
+++ b/app/views/checks/_analyze_accessibility_page.html.erb
@@ -4,24 +4,24 @@
 
   <% if check.completed? %>
     <ul>
-      <li><strong><%= check.human(:compliance_rate) %></strong> : <%= check.human_compliance_rate || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:audit_date) %></strong> :
+      <li><strong><%= t('.compliance_rate') %></strong> : <%= check.human_compliance_rate || t('.unknown') %></li>
+      <li><strong><%= t('.audit_date') %></strong> :
         <% if check.audit_date %>
           <%= l(check.audit_date) %>
           (<%= time_ago check.audit_date %>)
         <% else %>
-          <%= check.human(:unknown) %>
+          <%= t('.unknown') %>
         <% end %>
       </li>
       <% if check.audit_update_date %>
-        <li><strong><%= check.human(:audit_update_date) %></strong> :
+        <li><strong><%= t('.audit_update_date') %></strong> :
           <%= l(check.audit_update_date) %>
           (<%= time_ago check.audit_update_date %>)
         </li>
       <% end %>
-      <li><strong><%= check.human(:standard) %></strong> : <%= check.standard || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:auditor) %></strong> : <%= check.auditor || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:mentions_article) %></strong> : <%= check.mentions_article ? t("shared.yes") : t("shared.no") %></li>
+      <li><strong><%= t('.standard') %></strong> : <%= check.standard || t('.unknown') %></li>
+      <li><strong><%= t('.auditor') %></strong> : <%= check.auditor || t('.unknown') %></li>
+      <li><strong><%= t('.mentions_article') %></strong> : <%= check.mentions_article ? t("shared.yes") : t("shared.no") %></li>
     </ul>
   <% end %>
 </div>
