--- a/app/views/checks/_analyze_plan.html.erb
+++ b/app/views/checks/_analyze_plan.html.erb
@@ -6,35 +6,35 @@
     <ul>
       <% if check.link_url %>
         <li>
-          <strong><%= Checks::AnalyzePlan.human(:link_text) %> :</strong>
+          <strong><%= t('.link_text') %> :</strong>
           <%= check.link_text %>
         </li>
         <li>
-          <strong><%= Checks::AnalyzePlan.human(:link_url) %> :</strong>
+          <strong><%= t('.link_url') %> :</strong>
           <%= link_to check.link_url, check.link_url, target: :_blank %>
           <% if !check.reachable %>
-            <br><%= Checks::AnalyzePlan.human(:link_unreachable) %>
+            <br><%= t('.link_unreachable') %>
           <% end %>
           <% if check.link_misplaced %>
-            <br><%= Checks::AnalyzePlan.human(:link_misplaced) %>
+            <br><%= t('.link_misplaced') %>
           <% end %>
         </li>
       <% elsif check.text %>
         <li>
-          <strong><%= Checks::AnalyzePlan.human(:plan_in_main_text) %> :</strong>
+          <strong><%= t('.plan_in_main_text') %> :</strong>
           <%= check.text %>
         </li>
       <% else %>
         <li>
-          <strong><%= Checks::AnalyzePlan.human(:nothing_found) %></strong>
+          <strong><%= t('.nothing_found') %></strong>
         </li>
       <% end %>
       <li>
-        <strong><%= Checks::AnalyzePlan.human(:years) %> :</strong>
+        <strong><%= t('.years') %> :</strong>
         <% if check.years.present? %>
           <%= check.years.join("-") %>
         <% else %>
-          <%= Checks::AnalyzePlan.human(:year_not_found) %>
+          <%= t('.year_not_found') %>
         <% end %>
       </li>
     </ul>
