--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,9 +14,9 @@
     <%= header.with_tool_link title: current_user.name.truncate(30), path: user_path, html_attributes: { class: [icon_class("account-circle", btn: :tertiary)] } %>
     <%= header.with_tool_link title: t("shared.logout"), path: logout_path, html_attributes: { class: [icon_class("logout-box-r", btn: :secondary)], "data-turbo-method": :delete } %>
 
-    <%= header.with_direct_link_simple title: Site.human(:all), path: sites_path, active: current_page?(controller: :sites, action: :index) %>
-    <%= header.with_direct_link_simple title: Site.human(:add), path: new_site_path, active: current_page?(controller: :sites, action: :new) %>
-    <%= header.with_direct_link_simple title: Tag.human(:all), path: tags_path, active: current_page?(controller: :tags, action: :index) %>
+    <%= header.with_direct_link_simple title: t("sites.index.title"), path: sites_path, active: current_page?(controller: :sites, action: :index) %>
+    <%= header.with_direct_link_simple title: t("sites.new.title"), path: new_site_path, active: current_page?(controller: :sites, action: :new) %>
+    <%= header.with_direct_link_simple title: t("tags.index.title"), path: tags_path, active: current_page?(controller: :tags, action: :index) %>
     <%= header.with_direct_link_simple title: t("shared.help"), path: help_path, active: current_page?(controller: :pages, action: :help) %>
   <% else %>
     <%= header.with_tool_link title: t("shared.login"), path: login_path, html_attributes: { class: [icon_class(:account, :circle, btn: :secondary)] } %>
