--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (site:) %>
 <%= form_with(model: site) do |f| %>
-  <%= f.dsfr_input_field :url, :text_field, type: :url, required: true, autofocus: true, hint: Site.human(:url_hint) %>
-  <%= f.dsfr_text_field :name, hint: Site.human(:name_hint) %>
+  <%= f.dsfr_input_field :url, :text_field, label: t(".url"), type: :url, required: true, autofocus: true, hint: t('.url_hint') %>
+  <%= f.dsfr_text_field :name, label: t(".name"), hint: t('.name_hint') %>
 
   <%= render "tags_form", object: f.object %>
 
