--- a/app/views/sites/_tags_form.html.erb
+++ b/app/views/sites/_tags_form.html.erb
@@ -1,14 +1,14 @@
 <%# locals: (object:, focus: false, team: current_user.team) %>
 <%= turbo_frame_tag dom_class(object, :tags), data: { controller: :frame, "frame-action-value": tags_path } do %>
-  <%= dsfr_accordion_section(title: Tag.human(:all), expanded: focus, starting_header_level: 2, html_attributes: { class: "fr-mb-2w" }) do %>
+  <%= dsfr_accordion_section(title: t('.all'), expanded: focus, starting_header_level: 2, html_attributes: { class: "fr-mb-2w" }) do %>
     <%= fields_for(object) do |f| %>
-      <%= f.dsfr_collection_check_boxes(:tag_ids, team.tags, :id, :name, { legend: Tag.human(:all) }, class: "fr-legend--hidden") %>
+      <%= f.dsfr_collection_check_boxes(:tag_ids, team.tags, :id, :name, { legend: t('.all') }, class: "fr-legend--hidden") %>
       <div class="fr-input-group--inline fr-mb-0">
         <%= f.fields_for :tags_attributes, Tag.new do |ff| %>
-          <%= ff.dsfr_text_field :name, label: Tag.human(:new) %>
+          <%= ff.dsfr_text_field :name, label: t('.new') %>
         <% end %>
         <%= f.button t("shared.add"), type: :button, class: icon_class("add-circle", btn: :secondary, line: true), hidden: true,
-                    data: { action: "frame#submit:prevent", "frame-target": :button }, title: Tag.human(:add) %>
+                     data: { action: "frame#submit:prevent", "frame-target": :button }, title: t('.add') %>
       </div>
     <% end %>
     <%= set_focus(dom_id(object, :tag_name)) if focus %>
