feat: Refactor schema and plan checks to enhance year extraction and validity logic
- Improve year validation and extraction.

Signed-off-by: Manon Budin <manon.budin@beta.gouv.fr>

--- a/app/views/checks/_analyze_plan.html.erb
+++ b/app/views/checks/_analyze_plan.html.erb
@@ -21,7 +21,7 @@
         </li>
       <% elsif check.text %>
         <li>
-          <strong><%= t('.plan_in_main_text') %> :</strong>
+          <strong><%= t('.in_main_text') %> :</strong>
           <%= check.text %>
         </li>
       <% else %>
