--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -2,7 +2,7 @@
   <%= dsfr_row_check(site) %>
   <td class="fr-cell--center"><%= link_icon(:article, t('.view_name', name: site.name_with_fallback), url_for([site, site.audit]), title: t('.view_name', name: site.name_with_fallback), line: true, side: :left, sr_only: true) %></td>
   <td><%= link_to site.url_without_scheme_and_www.truncate(35, separator: /\W/), site.url, target: :_blank, title: site.url_without_scheme_and_www.length > 35 ? site.url_without_scheme_and_www : nil %></td>
-  <% site.audit.checks.each do |check| %>
+  <% site.audit.all_checks.each do |check| %>
     <td id="<%= dom_id(check, :sites_table) %>" class="fr-cell--center"><%= badge(to_badge(check), tooltip: check.tooltip?) %></td>
   <% end %>
   <td class="fr-cell--multiline">
