--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -28,7 +28,7 @@
         <%= t("audit.status.#{@audit.status_from_checks}") %>
       </p>
     <% end %>
-    <%= render(partial: @audit.checks, as: :check) %>
+    <%= render(partial: @audit.all_checks, as: :check) %>
   </div>
   <div class="fr-col-12 fr-col-md-4">
     <% audits = @site.audits.sort_by_newest.load %>
